# Qt_draw_interface

./: .gitignore  CMakeLists.txt  Canvas.cpp  Canvas.h  Ellipse.cpp  Ellipse.h  Line.cpp  Line.h  MainWindow.cpp  MainWindow.h  Rectangle.cpp  Rectangle.h  Shape.h  main.cpp
src/: Canvas.cpp  Canvas.h  Ellipse.cpp  Ellipse.h  Line.cpp  Line.h  MainWindow.cpp  MainWindow.h  Preview.cpp  Preview.h  Rectangle.cpp  Rectangle.h  Shape.h  main.cpp  preview.ui
